# dcs

./: .gitignore  AGENTS.md  README.md
python_app/: .env.example  AGENTS.md  TODO.md  main.py  pyproject.toml  requirements.txt
python_app/app/: analyzers.py  cache.py  config.py  dependency_check.py  docker_registry.py  models.py  scan_service.py
src/main/java/com/epam/dockercompscan/: DockerComponentScanApplication.java
src/main/java/com/epam/dockercompscan/config/: JsonMapper.java  JsonViewResolver.java  WEBMVCConfiguration.java
src/main/java/com/epam/dockercompscan/dockerregistry/: DockerRegistryService.java
src/main/java/com/epam/dockercompscan/owasp/: DependencyCheckService.java
src/main/java/com/epam/dockercompscan/owasp/analyzer/: AnalyzeEnabler.java  AnalyzerConstants.java  NvidiaCudaAnalyzer.java  OSVersionAnalyzer.java  RPackageAnalyzer.java
src/main/java/com/epam/dockercompscan/scan/: ScanController.java  ScanService.java
src/main/java/com/epam/dockercompscan/scan/domain/: Dependency.java  ImageScanResult.java  LayerScanResult.java  ScanRequest.java
src/main/java/com/epam/dockercompscan/util/: LayerKey.java  LayerScanCache.java
src/test/java/com/epam/dockercompscan/: AbstractSpringTest.java  TestApplication.java
src/test/java/com/epam/dockercompscan/owasp/: DependencyCheckServiceTest.java
src/test/java/com/epam/dockercompscan/owasp/analyzer/: NvidiaCudaAnalyzerTest.java  OSAnalyzerTest.java  RPackageAnalyzerTest.java
src/test/java/com/epam/dockercompscan/scan/: ScanServiceTest.java
